--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Dead Space UI</title>
         <meta name="description" content="A page in the style of the UI from Dead Space">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/scripts/styles.css">
+        <link rel="stylesheet" href="scripts/styles.css">
     </head>
     <body>
         <h1>This is a placeholder message for testing.</h1>
