Added form content and basic layout styling

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
         <link rel="stylesheet" href="scripts/styles.css">
     </head>
     <body>
-        <h1>This is a placeholder message for testing.</h1>
+        <form>
+            <fieldset>
+              <legend>/main menu</legend>
+
+              <button id="New Game">New Game</button>
+              <button id="Load Game">Load Game</button>
+              <button id="Options">Options</button>
+              <button id="Exit to Windows">Exit to Windows</button>
+            </fieldset>
+          </form>
     </body>
 </html>
