Form background now scrolls and scanline has been added

--- a/index.html
+++ b/index.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Dead Space UI</title>
-        <meta name="description" content="A page in the style of the UI from Dead Space">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="scripts/styles.css">
-    </head>
-    <body>
-        <form>
-            <fieldset>
-              <legend>/main menu</legend>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Dead Space UI</title>
+    <meta
+      name="description"
+      content="A page in the style of the UI from Dead Space"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="scripts/styles.css" />
+  </head>
+  <body>
+    <form>
+      <span id="scanline"></span>
+      <fieldset>
+        <legend>/main menu</legend>
 
-              <button id="New Game">New Game</button>
-              <button id="Load Game">Load Game</button>
-              <button id="Options">Options</button>
-              <button id="Exit to Windows">Exit to Windows</button>
-            </fieldset>
-          </form>
-    </body>
+        <button id="New Game">New Game</button>
+        <button id="Load Game">Load Game</button>
+        <button id="Options">Options</button>
+        <button id="Exit to Windows">Exit to Windows</button>
+      </fieldset>
+    </form>
+  </body>
 </html>
