Fixed default active button

--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
       <fieldset id="menu">
         <legend>/main menu</legend>
 
-        <button id="New Game" onmouseover="activate(this)" class="">
+        <button id="New Game" onmouseover="activate(this)" class="active">
           <div>New Game</div>
         </button>
 
-        <button id="Load Game" onmouseover="activate(this)" class="">
+        <button id="Load Game" onmouseover="activate(this)">
           <div>Load Game</div>
         </button>
 
-        <button id="Options" onmouseover="activate(this)" class="active">
+        <button id="Options" onmouseover="activate(this)">
           <div>Options</div>
         </button>
 
-        <button id="Exit to Windows" onmouseover="activate(this)" class="">
+        <button id="Exit to Windows" onmouseover="activate(this)">
           <div>Exit to Windows</div>
         </button>
         
